--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
       <aside
-        class="[grid-area:aside] flex-col flex overflow-y-auto"
+        class="[grid-area:aside] flex flex-col"
       >
         <AsideMenu />
       </aside>
