chore: Update AsideMenu and AsideMenuItem components

--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -15,9 +15,18 @@ import AsideMenuItem from "./AsideMenuItem.astro";
     </ul>
 
     <ul>
-      <AsideMenuItem href="/search">
+      <AsideMenuItem href="/#">
         <SearchIcon />
         Buscar
+      </AsideMenuItem>
+    </ul>
+  </div>
+
+  <div class="flex-1 bg-zinc-900 rounded-lg p-2">
+    <ul>
+      <AsideMenuItem href="/">
+        <LibraryIcon />
+        Biblioteca
       </AsideMenuItem>
     </ul>
   </div>
