--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,7 @@ const { title } = Astro.props;
 
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
-      <aside
-        class="[grid-area:aside] flex flex-col"
-      >
+      <aside class="[grid-area:aside] flex flex-col">
         <AsideMenu />
       </aside>
 
@@ -50,7 +48,48 @@ const { title } = Astro.props;
 
 <style is:global>
   html {
-    font-family: system-ui, sans-serif;
-    background: #000;
+    font-family: "CircularStd", system-ui, sans-serif;
+    background: #010101;
+    color: white;
+  }
+
+  @font-face {
+    font-family: "CircularStd";
+    src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "CircularStd";
+    src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "CircularStd";
+    src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "CircularStd";
+    src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "CircularStd";
+    src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
   }
 </style>
