--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,8 +1,11 @@
 ---
-import HomeIcon from "../icons/Home.astro";
-import SearchIcon from "../icons/Search.astro";
-import LibraryIcon from "../icons/Library.astro";
+import HomeIcon from "@/icons/Home.astro";
+import SearchIcon from "@/icons/Search.astro";
+import LibraryIcon from "@/icons/Library.astro";
 import AsideMenuItem from "./AsideMenuItem.astro";
+import AsideMenuCard from "./AsideMenuCard.astro";
+
+import { playlists } from "@/lib/data";
 ---
 
 <nav class="flex-1 flex flex-col gap-2">
@@ -28,6 +31,8 @@ import AsideMenuItem from "./AsideMenuItem.astro";
         <LibraryIcon />
         Biblioteca
       </AsideMenuItem>
+
+      {playlists.map((playlist) => <AsideMenuCard playlist={playlist} />)}
     </ul>
   </div>
 </nav>
