--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,27 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import PlayListItemCard from "@/components/PlayListItemCard.astro";
+import Layout from "../layouts/Layout.astro";
+import { playlists } from "@/lib/data";
 ---
 
-<Layout title="Welcome to Astro.">
-	
+<Layout title="Spotify Clone">
+  <div
+    id="playlist-container"
+    class="relative transition-all durattion-1000 bg-green-600"
+  >
+    <div class="relative z-10 px-6 pt-10">
+      <span class="text-3xl font-bold">Buenos días</span>
+
+      <div class="flex flex-wrap mt-6 gap-4">
+        {playlists.map((playlist) => <PlayListItemCard playlist={playlist} />)}
+      </div>
+    </div>
+
+    <div
+      class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80"
+    >
+    </div>
+  </div>
 </Layout>
 
-<style>
-	
-</style>
+<style></style>
