--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import PlayListItemCard from "@/components/PlayListItemCard.astro";
+import Greetings from "@/components/Greetings.svelte";
 import Layout from "../layouts/Layout.astro";
 import { playlists } from "@/lib/data";
 ---
@@ -10,7 +11,7 @@ import { playlists } from "@/lib/data";
     class="relative transition-all durattion-1000 bg-green-600"
   >
     <div class="relative z-10 px-6 pt-10">
-      <span class="text-3xl font-bold">Buenos días</span>
+      <Greetings />
 
       <div class="flex flex-wrap mt-6 gap-4">
         {playlists.map((playlist) => <PlayListItemCard playlist={playlist} />)}
@@ -18,7 +19,7 @@ import { playlists } from "@/lib/data";
     </div>
 
     <div
-      class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80"
+      class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-[1]"
     >
     </div>
   </div>
