--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -33,7 +33,7 @@ const { title } = Astro.props;
         <slot />
       </main>
 
-      <footer class="[grid-area:player] h-[80px]">
+      <footer class="[grid-area:player]">
         <Player client:load transition:name="media-player" transition:persist />
       </footer>
     </div>
