--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -9,7 +9,7 @@ import { playlists } from "@/lib/data";
 ---
 
 <nav class="flex-1 flex flex-col gap-2">
-  <div class="bg-zinc-900 rounded-lg p-2">
+  <div class="bg-zinc-900 p-2 rounded-lg">
     <ul>
       <AsideMenuItem href="/">
         <HomeIcon class="text-zinc-400" size={32} />
@@ -25,7 +25,7 @@ import { playlists } from "@/lib/data";
     </ul>
   </div>
 
-  <div class="flex-1 bg-zinc-900 rounded-lg p-2">
+  <div class="flex-1 bg-zinc-900 p-2 rounded-lg overflow-y-hidden">
     <ul>
       <AsideMenuItem href="/">
         <LibraryIcon />
