--- a/src/components/AsideMenuItem.astro
+++ b/src/components/AsideMenuItem.astro
@@ -8,7 +8,7 @@ const { href } = Astro.props;
 
 <li>
   <a
-    class="flex gap-4 text-zinc-400 hover:text-zinc-100 items-center p-3 font-medium transition duration-300 group"
+    class="flex gap-4 text-zinc-400 hover:text-zinc-100 items-center p-3 font-medium rounded-lg transition duration-300 group"
     href={href}
   >
     <slot />
