--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -13,7 +13,7 @@ const artistsString = artists.join(", ");
 ---
 
 <article
-  class="group relative hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500/30 rounded-md ransi transition-all duration-300"
+  class="group relative bg-white/10 hover:bg-white/20 shadow-lg hover:shadow-xl rounded-md transition-all duration-300"
 >
   <div
     class=`absolute right-4 bottom-20 translate-y-4
