--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
     <title>{title}</title>
     <ViewTransitions fallback="none" />
   </head>
+
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
       <aside class="[grid-area:aside] flex-col flex overflow-y-hidden">
@@ -28,7 +29,7 @@ const { title } = Astro.props;
       </aside>
 
       <main
-        class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full"
+        class="[grid-area:main] rounded-lg bg-gradient-to-t bg-zinc-900 overflow-y-hidden"
       >
         <slot />
       </main>
@@ -37,14 +38,15 @@ const { title } = Astro.props;
         <Player client:load transition:name="media-player" transition:persist />
       </footer>
     </div>
+
     <style>
       #app {
         display: grid;
         grid-template-areas:
-          "aside main main"
-          "player player player";
+          "aside main"
+          "player player";
         grid-template-columns: 350px 1fr;
-        grid-template-rows: 1fr auto;
+        grid-template-rows: auto auto;
       }
     </style>
 
