--- a/src/components/MusicsTable.astro
+++ b/src/components/MusicsTable.astro
@@ -12,17 +12,17 @@ const { songs } = Astro.props;
 <table class="table-auto text-left min-w-full divide-y-1 divide-gray-500/50">
   <thead class="">
     <tr class="text-gray-300 text-sm font-light">
-      <th class="px-4 py-2 w-5">#</th>
+      <th class="px-4 py-2 w-10">#</th>
       <th class="px-4 py-2">Título</th>
       <th class="px-4 py-2">Albúm</th>
-      <th class="px-4 py-2 w-6"><Time /></th>
+      <th class="px-4 py-2"><Time /></th>
     </tr>
   </thead>
 
   <tbody>
     {
       songs.map((song: Song, index: number) => (
-        <tr class="text-gray-300 text-sm font-light hover:bg-white/10 transition duration-300">
+        <tr class="text-gray-300 text-sm font-normal hover:bg-white/10 transition duration-300 group">
           <td class="px-4 py-2 rounded-tl-lg rounded-bl-lg">{index + 1}</td>
           <td class="px-4 py-2 flex gap-3">
             <picture>
@@ -34,8 +34,8 @@ const { songs } = Astro.props;
             </picture>
 
             <div class="flex flex-col">
-              <h3 class="text-white text-base font-base">{song.title}</h3>
-              <span>{song.artists.join(", ")}</span>
+              <h3 class="text-white text-base">{song.title}</h3>
+              <span class="text-sm">{song.artists.join(", ")}</span>
             </div>
           </td>
           <td class="px-4 py-2">{song.album}</td>
