--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,12 +24,12 @@ const { title } = Astro.props;
 
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
-      <aside class="[grid-area:aside] flex-col flex overflow-y-hidden">
+      <aside class="[grid-area:aside] flex-col flex overflow-x-hidden">
         <AsideMenu />
       </aside>
 
       <main
-        class="[grid-area:main] rounded-lg bg-gradient-to-t bg-zinc-900 overflow-y-hidden"
+        class="[grid-area:main] rounded-lg bg-gradient-to-t bg-zinc-900 overflow-x-hidden"
       >
         <slot />
       </main>
@@ -51,10 +51,19 @@ const { title } = Astro.props;
     </style>
 
     <style is:global>
+      ::-webkit-scrollbar {
+        display: none;
+      }
+
       html {
         font-family: "CircularStd", system-ui, sans-serif;
         background: #010101;
         color: white;
+        overflow: auto;
+      }
+
+      body {
+        overflow: auto;
       }
 
       @font-face {
