--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -8,8 +8,8 @@ import AsideMenuCard from "./AsideMenuCard.astro";
 import { playlists } from "@/lib/data";
 ---
 
-<nav class="flex-1 flex flex-col gap-2">
-  <div class="bg-zinc-900 p-2 rounded-lg">
+<nav class="h-full flex flex-col gap-2">
+  <div class="flex flex-col bg-zinc-900 p-2 rounded-lg overflow-hidden">
     <ul>
       <AsideMenuItem href="/">
         <HomeIcon class="text-zinc-400" size={32} />
@@ -25,14 +25,20 @@ import { playlists } from "@/lib/data";
     </ul>
   </div>
 
-  <div class="flex-1 bg-zinc-900 p-2 rounded-lg overflow-y-hidden">
+  <div
+    class="flex-1 flex flex-col bg-zinc-900 p-2 rounded-lg overflow-x-hidden"
+  >
     <ul>
       <AsideMenuItem href="/">
         <LibraryIcon />
         Biblioteca
       </AsideMenuItem>
-
-      {playlists.map((playlist) => <AsideMenuCard playlist={playlist} />)}
     </ul>
+
+    <div class="playlists-container my-2 overflow-x-hidden">
+      <ul>
+        {playlists.map((playlist) => <AsideMenuCard playlist={playlist} />)}
+      </ul>
+    </div>
   </div>
 </nav>
