--- a/src/components/AsideMenuCard.astro
+++ b/src/components/AsideMenuCard.astro
@@ -12,7 +12,7 @@ const arstistString = artists.join(", ");
 ---
 
 <a
-  class="playlist-item flex relative p-2 overflow-hidden items-center gap-4 rounded-md hover:bg-zinc-500"
+  class="playlist-item flex relative p-2 overflow-hidden items-center gap-4 rounded-md hover:bg-white/10 transition duration-200"
   href={`/playlist/${id}`}
 >
   <picture class="h-12 w-12 flex-none">
@@ -23,10 +23,10 @@ const arstistString = artists.join(", ");
     />
   </picture>
 
-  <div class="flex flex-auto flex-col truncate">
+  <div class="flex flex-auto flex-col font-normal truncate">
     <h4 class="text-white text-sm">{title}</h4>
 
-    <span class="text-xs text-gray-400">
+    <span class="text-sm text-gray-400">
       {arstistString}
     </span>
   </div>
