--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -7,20 +7,17 @@ interface Props {
 }
 
 const { playlist } = Astro.props;
-const { id, cover, title, artists, color } = playlist;
-
-const artistsString = artists.join(", ");
+const { id, cover, title, description } = playlist;
 ---
 
 <article
-  class="group relative bg-white/10 hover:bg-white/20 shadow-lg hover:shadow-xl rounded-md transition-all duration-300"
+  class="group relative bg-transparent hover:bg-gray-200/10 rounded-md transition-all duration-300"
 >
   <div
-    class=`absolute right-4 bottom-20 translate-y-4
+    class="absolute right-4 bottom-32 translate-y-4
     transition-all duration-500 opacity-0
     group-hover:translate-y-0 group-hover:opacity-100
-    z-10
-  `
+    z-10"
   >
     <CardPlayButton id={id} client:visible />
   </div>
@@ -33,22 +30,26 @@ const artistsString = artists.join(", ");
     <picture class="aspect-square w-full h-auto flex-none">
       <img
         src={cover}
-        alt={`Cover of ${title} by ${artistsString}`}
+        alt={`Cover of ${title}`}
         class="object-cover w-full h-full rounded-md"
         transition:name=`playlist ${id} image`
       />
     </picture>
 
-    <div class="flex flex-auto flex-col px-2">
-      <h4 class="text-white text-sm" transition:name=`playlist ${id} title`>
+    <div class="flex flex-auto flex-col gap-2 px-2">
+      <h4
+        class="text-white text-base truncate"
+        transition:name=`playlist ${id} title`
+        title={title}
+      >
         {title}
       </h4>
 
       <span
-        class="text-xs text-gray-400"
-        transition:name=`playlist ${id} artists`
+        class="text-sm text-gray-400 group-hover:text-white/80"
+        transition:name=`playlist ${id} description`
       >
-        {artistsString}
+        {description}
       </span>
     </div>
   </a>
