--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { playlists } from "@/lib/data";
     <div class="relative z-10 px-6 py-10">
       <Greetings />
 
-      <div class="flex flex-wrap mt-6 gap-4">
+      <div class="flex flex-wrap mt-6 gap-4 -z-10">
         {playlists.map((playlist) => <PlayListItemCard playlist={playlist} />)}
       </div>
     </div>
