--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
       </main>
 
       <footer class="[grid-area:player]">
-        <Player client:load transition:name="media-player" transition:persist />
+        <Player client:load transition:persist />
       </footer>
     </div>
 
