--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,9 @@ import { playlists } from "@/lib/data";
     <div class="relative z-10 px-6 py-10">
       <Greetings />
 
-      <div class="grid grid-cols-5 mt-6 gap-4">
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 2xl:grid-cols-6 justify-items-center mt-6 gap-4"
+      >
         {playlists.map((playlist) => <PlayListItemCard playlist={playlist} />)}
       </div>
     </div>
