style: Update UI styles for MusicsTable component

--- a/src/components/MusicsTable.astro
+++ b/src/components/MusicsTable.astro
@@ -9,8 +9,8 @@ interface Props {
 const { songs } = Astro.props;
 ---
 
-<table class="table-auto text-left min-w-full divide-y-1 divide-gray-500/50">
-  <thead class="">
+<table class="table-auto text-left min-w-full divide-y-2 divide-gray-700">
+  <thead>
     <tr class="text-gray-300 text-sm font-light">
       <th class="px-4 py-2 w-10">#</th>
       <th class="px-4 py-2">Título</th>
